--- a/sushi_website/public/stylesheets/mixins.styl
+++ b/sushi_website/public/stylesheets/mixins.styl
@@ -7,7 +7,7 @@ colors = {
   default: #ffffff
 }
 
-button()
+slanted_button()
   background: colors.emphasis
   color: colors.default
   padding: 0 18px 0 10px
@@ -29,6 +29,12 @@ button()
     border-right: 14px solid transparent
     border-bottom: 14px solid transparent
 
+button()
+  background: colors.emphasis
+  color: colors.default
+  padding: 0 18px 0 10px
+  float: right
+  
 overlay()
   position: absolute
   width: 100%
